update info about the game

--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>KILL ALL TINY HUMANS</title>
-    <meta name="description" content="Kill all tiny humans">
+    <title>Mother Earth's Blues</title>
+    <meta name="description" content="Mother Earth's Blues">
     <link rel="stylesheet" href="kath.css">
 </head>
 <body>
-    <script type="text/javascript">
-        // JS CODE
-    </script>
     <canvas id="game" width="1280" height="720">
     </canvas>
-
     <script src="kath.js"></script>
 </body>
 </html>
